# exact-arithmetic

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
headers/: integer.h  rational.h
spec/: doubles-can-be-converted-to-rationals.cpp  integers-can-be-converted-to-rationals.cpp  main.cpp  rationals-can-be-added.cpp  rationals-can-be-constructed.cpp  rationals-can-be-divided.cpp  rationals-can-be-equated.cpp  rationals-can-be-multiplied.cpp  rationals-can-be-subtracted.cpp
spec/helpers/: RandomRationalGenerator.cpp  RandomRationalGenerator.h
spec/integer/: integers-can-be-added.cpp  integers-can-be-compared-greater-than.cpp  integers-can-be-compared-less-than.cpp  integers-can-be-compared.cpp  integers-can-be-constructed.cpp  integers-can-be-copied.cpp  integers-can-be-decremented.cpp  integers-can-be-divided.cpp  integers-can-be-equated.cpp  integers-can-be-incremented.cpp  integers-can-be-input-with-istream.cpp  integers-can-be-output-with-ostream.cpp  integers-can-be-subtracted.cpp
spec/rational/: doubles-can-be-converted-to-rationals.cpp  gcd-functions-correctly.cpp  rationals-can-be-added.cpp  rationals-can-be-constructed.cpp  rationals-can-be-divided.cpp  rationals-can-be-equated.cpp  rationals-can-be-multiplied.cpp  rationals-can-be-subtracted.cpp
src/: gcd.cpp  integer.cpp  rational.cpp
test/: rationals-can-be-equated.cpp
